Fix style issues